<resources>
    <string name="app_name">Meow Moments</string>
    <string name="title_home">Главная</string>
    <string name="title_calendar">Календарь</string>
    <string name="title_collection">Коллекция</string>
    <string name="title_info">Справка</string>
    <string name="title_settings">Настройки</string>
    <string name="coming_soon_calendar">Календарь - Скоро!</string>
    <string name="coming_soon_collection">Коллекция - Скоро!</string>
    <string name="coming_soon_info">Справка - Скоро!</string>
    <string name="coming_soon_settings">Настройки - Скоро!</string>
    <string name="calendar_title">Календарь фактов</string>
    <string name="no_facts_for_date">Сегодня вы ещё не собрали факты</string>
    <string name="facts_for_date">Факты за %s</string>
    <string name="month_year_format">%1$s %2$d</string>
    <string name="no_facts_found">Не удалось загрузить факты о котах</string>
    <string name="loading_facts">Загрузка фактов...</string>
    <string name="empty_collection">Вы ещё не собрали ни одного факта</string>
    <string name="close">Закрыть</string>
    <string name="previous_month">Предыдущий месяц</string>
    <string name="next_month">Следующий месяц</string>
    <string name="title_favorites">Избранное</string>
    <string name="empty_favorites">Вы ещё не добавили ни одного факта в избранное</string>
    <string name="no_recently_viewed">Нет недавно просмотренных фактов</string>
    <string name="title_my_facts">Мои факты</string>
</resources>