<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mainFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/collectionFragment"
        android:icon="@drawable/ic_collection"
        android:title="@string/title_collection" />

    <item
        android:id="@+id/infoFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />

</menu>